💄 위치 및 여백 수정

--- a/src/pages/analytics/loading/Loading.module.css
+++ b/src/pages/analytics/loading/Loading.module.css
@@ -3,12 +3,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 60px);
+  height: calc(100vh - 120px);
+  padding: 0 16px;
 }
 
 .text {
-  font-size: var(--font-size-18);
   margin-bottom: 20px;
+  font-size: var(--font-size-18);
+  text-align: center;
 }
 
 .progressBar {
